--- a/advanced-html-css/animation/02-pop-up/style.css
+++ b/advanced-html-css/animation/02-pop-up/style.css
@@ -34,8 +34,9 @@ button {
   position: fixed;
   top: 50%;
   left: 50%;
+  transition: transform 250ms ease-in-out, opacity 400ms;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   pointer-events: none;
   opacity: 0%;
   text-align: center;
@@ -56,6 +57,7 @@ button {
 .popup-modal.show {
   opacity: 100%;
   pointer-events: all;
+  transform: translate(-50%, -50%);
 }
 
 .backdrop.show {
